--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -3239,9 +3239,7 @@ tbody.collapse.in {
   border-bottom-left-radius: 0;
 }
 .btn-group .dropdown-toggle:active,
-.btn-group.open .dropdown-toggle {
-  outline: 0;
-}
+.btn-group.open .dropdown-toggle {outline: 0px;}
 .btn-group > .btn + .dropdown-toggle {
   padding-right: 8px;
   padding-left: 8px;
@@ -4033,8 +4031,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-}
+.navbar-default .navbar-nav > .active > a:focus {}
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
 .navbar-default .navbar-nav > .disabled > a:focus {
