--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -3239,7 +3239,7 @@ tbody.collapse.in {
   border-bottom-left-radius: 0;
 }
 .btn-group .dropdown-toggle:active,
-.btn-group.open .dropdown-toggle {outline: 0px;}
+.btn-group.open .dropdown-toggle {outline: 0;}
 .btn-group > .btn + .dropdown-toggle {
   padding-right: 8px;
   padding-left: 8px;
