--- a/assets/css/myCustom.css
+++ b/assets/css/myCustom.css
@@ -264,6 +264,32 @@ section {
 /* Faqs CSS */
 /* button CSS FAQ */
 
+.faqs h2{
+font-size: 5rem;
+text-align: center;
+color: #a19535;
+font-weight: 700;
+}
+
+.container-fluid{
+	max-width: 77%;
+	text-align: center;
+	align-items: center;
+}
+.col{
+	align-items: right;
+	text-align: right;
+}
+.NeedHelp{
+	padding-top: 60px;
+	text-align: center;
+	padding-bottom: 10px;
+}
+.why-us p{
+	text-align: center;
+	align-items: center;
+	padding-bottom: 10px;
+}
 .btns-faq {
 	text-align: center;
 	margin-bottom: 50px;
