--- a/assets/css/myCustom.css
+++ b/assets/css/myCustom.css
@@ -268,10 +268,27 @@ section {
 }
 
 /* FAQ end section  */
+#why-us {
+  margin: 0 12% 0 12%;
+  text-align: center;
+  align-items: center;
+}
+
 .why-us .content {
   padding: 60px 100px 0 100px;
 }
 
+#page .pcontainer-wrapper h2 {
+  text-align: center;
+  color: #a19535;  font-size: 38px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.why-us {
+  align-items: center;
+  text-align: center;
+}
 /* image at the end  */
 
 .why-us .img {
